various layout issues
- footer content
- fixed nav positioning
- removed app.css and updated main.css to handle

--- a/webroot/scss/main.scss
+++ b/webroot/scss/main.scss
@@ -5,12 +5,30 @@ Copyright 2015 Origami Structures
     Created on : Aug 19, 2015, 12:31:14 PM
     Author     : jasont
 */
+@import "settings";
+@import "../bower_components/foundation/scss/foundation";
 @import "_main-page.scss";
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web|Unna);
 
+
 footer {
     background: black none repeat scroll 0 0;
-    height: 40px;
+    height: $topbar-height;
     margin: 10px 0 0;
+    width: 100%;
+    padding-left: 10px;
+    vertical-align: baseline;
+}
+
+section.toc{
+    @include panel;
+    h1{
+        font-size: 1.25rem;
+    }
+}
+.toc-anchor{
+    text-align: right;
+    float: right;
+    border-bottom: thin solid #ddd;
     width: 100%;
 }
